syntax="proto3";

option  go_package = "amusing-x.com/ganymede/ganymedeservice";

package ganymde;

message IsLoginRequest {
  string sessionID = 1;
}

message IsLoginResponse {
  bool Login = 1;
}