syntax = "proto3";

option go_package = "amusing-x.com/pangu/panguservice";

import "google/api/annotations.proto";
import "category_create.proto";
import "category_list.proto";

package panguservice;

message BlankParams{}

message PongResponse {
  string serverName = 1;
}

service PanGuService {
  rpc Pong(BlankParams) returns (PongResponse) {
    option (google.api.http) = {
      get: "/v1/pangu/pong"
    };
  }

  rpc CategoryCreate(CategoryCreateRequest) returns (CategoryCreateResponse) {
    option (google.api.http) = {
      post: "/v1/pangu/category"
      body: "*"
    };
  }

  rpc CategoryList(CategoryListRequest) returns (CategoryListResponse) {
    option(google.api.http) = {
      get: "/v1/pangu/categories"
    };
  }
}

